# keygate

./: .env  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE.CONTRIBUTORS.md  LICENSE.MIT.md  NOTES.md  README.md  access_control.yaml  biome.json  bun.lockb  package.json  rome.json  schema.prisma  tsconfig.json  tsconfig.node.json
.cargo/: config.toml
.github/: .gitattributes
.github/workflows/: ci.yaml
.sqlx/: query-1becf3c5630652b14db86666a0325037e64eb707034dd67b5d6ef5eb49ce8628.json  query-1ec32cf3041bb1fd20868d6a8d749ad87229a93fe515df47b26accb6ad41297d.json  query-22c48ae765e35734bf0da9b7e5c47625d02b067a2e6bf8a913ae291190d9d732.json  query-2de38626d675660fa17870914419cb16711333091430e04ba489660cfb3db011.json  query-31cfdbf8c72386cc454afb83acaeeba4df5f852afc7214aa70761722c8ff11e3.json  query-3439e554aa98b8736b245a151e65d82fe456edec72a66631f9758c44e9cc6631.json  query-3a28e31738889d579babae938a0ce21dfe98a549f1fae226c92d35df4ca0cf4a.json  query-3e6516033d7e510554d8d60c469c27222f9c89336df97e58b898d1f22e251bb3.json  query-5e91d06b3a2d0680290932f1184ec80b7655661d01903911a51c3780ffab0912.json  query-66af65dea7198ee6c6d43abde60bfa0502ca73f328df079b1066fae7d9c21091.json  query-7b6d51bf6c5771e1182d0aa7dd15c8a67c91c080bec4c2e65d88db26cf3f9314.json  query-8d6b5c0fe3791828daae8eabe2ae74bcb244d7252a9145a8e396baf8aff55a15.json  query-8d712da83228cf9292444285425a63e7526a8a7ea077f3260794dff332f014e9.json  query-95b1411dcfbaae3bc55c21d44596b46ca4d83062e18fae75f21da69faaeb578e.json  query-9808c6e06a072509918d43b3ef56d546510383bdc51d7e3c15e7ef3604cfcb26.json  query-b4d6294724bd53b13a52cf39094dddfdfee32b4d073a0d5595f8ee9d838595ad.json  query-b50e7d6bbadcf32cfa1678ee902a44f642bfeccb04d30ef2511cf4aa15146f45.json  query-bd63ebe40af35eedbff7c0ef304cd3f357bc528dea4c0c42ce011826c8601175.json  query-c1527a8058156fa72e171d1bff3abd7ce9ae74eefd433edf6990b867531760ef.json  query-d2f413be9aad0d8b869e4ffb91e8e7544f27af8a7aa41ed1f78e82642bf81299.json  query-e13969a3d9a6c65be31b97d8ae04044eba3492a7f715f2ca4596c9902179b589.json  query-f08f0cbacd234623b799ebb186a027f1fa80e107961ffac363cc125c206431c9.json  query-f936c0a224597af4dcafe69008049434ee5c9c7331c611e0ff8604606c599d37.json
api/: private.json  private.ts  public.json  public.ts
client/: Cargo.toml
core/: Cargo.toml  api.rs  config.rs  lib.rs  models.rs  storage.rs  traits.rs  utils.rs
core/api/: flow_login.rs  flow_registration.rs  flow_signup.rs  flow_verification.rs  identity.rs  login.rs  metadata.rs  oauth.rs  process_login.rs  process_recovery.rs  process_signup.rs  recovery.rs  session.rs  signup.rs  verification.rs
core/storage/: constants.rs  memory.rs  redis.rs  rocksdb.rs  storage_serde_extension.rs  storage_utils_extension.rs  traits.rs
core/storage/traits/: ac_extension.rs  identity_extension.rs  process_extension.rs  serde_extension.rs  session_extension.rs
core/traits/: identity.rs  login.rs  metadata.rs  oauth.rs  recovery.rs  registration.rs  session.rs  signup.rs  storage_extension.rs  verification.rs
core/utils/: hash.rs  pwned.rs  random.rs  serialize.rs  sha1.rs  tokens.rs  validate.rs
crates/client/: Cargo.toml
crates/core/: .env  Cargo.toml  api.rs  config.rs  lib.rs  models.rs  secrets.rs  storage.rs  utils.rs
crates/core/api/: ac.rs  auth.rs  identity.rs  metadata.rs  mod.rs  process_login.rs  process_recovery.rs  process_signup.rs  session.rs  template.rs
crates/core/database/: Cargo.toml  identity.rs  lib.rs  login.rs  mod.rs  models.rs
crates/core/migrations/: 20230725173015_initial.sql
crates/core/models/: Cargo.toml  identity.rs  identity_email.rs
crates/core/prisma/: .gitignore  Cargo.toml  lib.rs
crates/core/settings/: mod.rs  settings.rs
crates/core/storage/: backends.rs  constants.rs  errors.rs  mod.rs  redis.rs  rocksdb.rs  traits.rs
crates/core/storage/redis/: constants.rs  implementation.rs  mod.rs  utils.rs
crates/core/storage/sql/: mod.rs
crates/core/storage/sql/entity/: Cargo.toml
crates/core/storage/sql/entity/src/: identity.rs  identity_linked_account.rs  refresh_token.rs  session.rs
crates/core/storage/sql/migration/: Cargo.toml
crates/core/storage/traits/: ac_extension.rs  config_extension.rs  identity_extension.rs  mod.rs  process_extension.rs  redis_extension.rs  serde_extension.rs  session_extension.rs
crates/core/utils/: encoding.rs  hash.rs  macros.rs  mod.rs  random.rs  session.rs  sha1.rs  tokens.rs  validate.rs
crates/keygate/: Cargo.toml
crates/keygate/src/: lib.rs  main.rs
crates/keygate/src/db/: mod.rs  models.rs  tables.rs
crates/proto/: Cargo.toml  build.rs  lib.rs
crates/proto/src/: ac.proto  admin.proto  auth.proto  identity.proto  login.proto  meta.proto  models.proto  process.proto  session.proto  util.proto
crates/proto/src/models/: internal.proto  models.proto
crates/server/: Cargo.toml  bin.rs  errors.rs  gen_openapi.rs  lib.rs  openapi.rs  private.json  public.json
crates/server/middleware/: application.rs  mod.rs  session.rs
crates/server/private/: _api.rs  auth.rs  mod.rs
crates/server/public/: _api.rs  identity.rs  login.rs  mod.rs  signup.rs
crates/server/services/: identity.rs
crates/standalone/: Cargo.toml  bin.rs  errors.rs  lib.rs  swagger.rs  utils.rs
crates/standalone/api/: admin.rs  public.rs
crates/standalone/api/public/: identity.rs  meta.rs  process_login.rs  process_signup.rs  session.rs
crates/utils/: Cargo.toml  _session.rs.old  atomic.rs  encode.rs  hash.rs  lib.rs  macros.rs  pwned.rs  random.rs  sha1.rs  tokens.rs  validate.rs
crates/utils/tokens/: biscuit.rs  ed25519.rs  keypair.rs  mod.rs
crates/utils/tokens/formats/: biscuit.rs  jwt.rs  mod.rs  paseto.rs
standalone/: Cargo.toml  bin.rs  errors.rs  lib.rs  main.rs  schema.rs  swagger.rs  utils.rs
standalone/api/: admin.rs  public.rs
standalone/api/public/: process_login.rs  process_signup.rs  schema.rs  session.rs
web/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
web/admin/: index.html  package.json  vite.config.ts
web/standalone/: index.html  package.json  vite.config.ts
(+6 files in other folders)
