[workspace]
members = [
  "crates/core",
  "crates/core/storage/sql/entity",
  "crates/core/storage/sql/migration",
  "crates/server",
  "crates/proto",
]

[profile.release]
# codegen-units = 1 
lto = true 
opt-level = 3 # Optimize for size.
panic = "abort" 
strip = true # Automatically strip symbols from the binary.
