[package]
edition = "2021"
name = "keysignal-core"
version = "0.1.0"

[lib]
path = "lib.rs"

[dependencies]
argon2 = "0.4"
dashmap = "5"
downcast-rs = "1.2.0"
jsonwebtoken = {version = "8", default-features = false, optional = true}
nanoid = "0.4.0"
oauth2 = {version = "4", optional = true, default-features = false, features = ["rustls-tls"]}
rand_core = {version = "0.6", features = ["std"]}
rmp-serde = "1.1"
serde = {version = "1.0", features = ["derive"]}
thiserror = "1"

r2d2 = {version = "0.8", optional = true}
redis = {version = "0.21", default-features = false, optional = true, features = ["r2d2"]}
rocksdb = {version = "0.19.0", default-features = false, optional = true, features = ["lz4"]}

[features]
default = ["oauth2", "backend-redis", "backend-rocksdb"]

backend-redis = ["dep:redis"]
backend-rocksdb = ["dep:rocksdb", "r2d2"]

jwt = ["dep:jsonwebtoken"]
oauth2 = ["dep:oauth2"]
