[package]
edition = "2021"
name = "keygate-core"
version = "0.1.0"

[lib]
path = "lib.rs"

[dependencies]

# crypto & encoding
argon2 = "0.4"
base64 = "0.13"
hex = "0.4.3"
keygate-jwt = {version = "1.1", features = ["eddsa", "none"]}
nanoid = "0.4.0"
rand_core = {version = "0.6", features = ["std"]}
regex = "1.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha1 = "0.10"

chrono = {version = "0.4", features = ["serde"]}
dashmap = "5"
downcast-rs = "1.2.0"
reqwest = {version = "0.11", default-features = false, features = ["rustls-tls"]}
rmp-serde = "1.1"
thiserror = "1"
tokio = {version = "1", default-features = false, features = ["macros"]}

async-trait = "0.1"
deadpool = {version = "0.9", optional = true}
deadpool-redis = {version = "0.11", optional = true}
redis = {version = "0.22", default-features = false, optional = true, features = ["r2d2", "async-std-comp", "aio"]}
rocksdb = {version = "0.19.0", default-features = false, optional = true, features = ["lz4"]}

no-panic = "0.1"

[features]
default = ["backend-redis", "backend-rocksdb"]

backend-redis = ["dep:redis"]
backend-rocksdb = ["dep:rocksdb", "dep:deadpool", "dep:deadpool-redis"]
