[package]
edition = "2021"
name = "keysignal-standalone"
publish = false
version = "0.1.0"

[[bin]]
name = "keysignal"
path = "main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4", default-features = false, features = ["macros", "cookies"]}
keysignal-core = {path = "../core"}
