[package]
edition = "2021"
name = "keygate-standalone"
publish = false
version = "0.1.0"

[lib]
path = "lib.rs"

[[bin]]
name = "keygate"
path = "bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4", default-features = false, features = ["macros", "cookies"]}
keygate-core = {path = "../core"}
