[package]
edition = "2021"
name = "keygate-core"
version = "0.1.0"

[lib]
path = "lib.rs"

[dependencies]
arc-swap = "1.6"
dashmap = "5.4.0"
keygate-utils = {path = "../utils"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
tokio = {version = "1", default-features = false, features = ["macros"]}
tracing = "0.1"

dirs = "5.0.1"
sqlx = {version = "0.7", features = ["runtime-tokio", "tls-rustls", "time", "migrate"]}
time = {version = "0.3", features = ["serde"]}
utoipa = {version = "4", default-features = false, optional = true}

[features]
default = ["sqlite", "utoipa"]

mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
