[package]
name="keygate"
version="0.1.0"
edition.workspace=true
license.workspace=true
authors.workspace=true
repository.workspace=true

[[bin]]
name="keygate-bin"
path="src/main.rs"

[lib]
path="src/lib.rs"

[dependencies]
obake={version="1.0", features=["serde"]}
okv={version="0.3", features=["rmp-serde"]}
serde="1.0"
rmp-serde="1.1"
tower="0.4"
axum="0.7"
tokio="1.0"
time="0.3"
tracing="0.1"
thiserror="1.0"
cuid2="0.1"
