[package]
edition = "2021"
name = "proto"
publish = false
version = "0.1.0"

[lib]
path = "lib.rs"

[dependencies]
prost = "0.11"
tonic = {version = "0.9", features = ["prost"], default-features = false, optional = true}
tonic-types = {version = "0.9", default-features = false}

[build-dependencies]
tonic-build = "0.9"

[features]
client = []
default = []
server = ["tonic"]
