[package]
edition = "2021"
name = "keygate-server"
publish = false
version = "0.1.0"

[lib]
path = "lib.rs"

[[bin]]
name = "keygate"
path = "bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-error = "0.2"

color-eyre = "0.6"
figment = {version = "0.10", features = ["env"]}
keygate-core = {path = "../core"}
thiserror = "1"
tokio = {version = "1", features = ["rt-multi-thread", "macros", "sync", "time"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

axum = {version = "0.6", default-features = false, features = ["http1", "headers", "macros", "json", "tokio", "tower-log", "tracing"]}