[package]
edition = "2021"
name = "keygate-server"
publish = false
version = "0.1.0"

[lib]
path = "lib.rs"

[[bin]]
name = "keygate"
path = "bin.rs"

[[bin]]
name = "gen-openapi"
path = "./gen_openapi.rs"

[dependencies]
color-eyre = "0.6"
figment = {version = "0.10", features = ["env"]}
thiserror = "1"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = "0.3"

axum = {version = "0.6", default-features = false, features = ["http1", "headers", "macros", "json", "tokio", "tower-log", "tracing"]}
keygate-core = {path = "../core"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["rt-multi-thread", "macros", "sync", "time"]}
utoipa = {features = ["axum_extras", "time"], version = "4.0"}
utoipa-swagger-ui = {features = ["axum"], version = "4.0"}
