[package]
edition = "2021"
name = "keygate-utils"
version = "0.1.0"

[lib]
path = "lib.rs"

[dependencies]
argon2 = "0.5"
base64 = "0.21"
biscuit-auth = "4.0"
ed25519-dalek = {version = "2.0.0", features = ["rand_core"]}
keygate-jwt = {version = "1.2", features = ["eddsa"]}
rand_core = {version = "0.6", features = ["std"]}
regex = "1.5"
rusty_paseto = "0.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
time = {version = "0.3", features = ["formatting", "parsing"]}
zeroize = "1.6"

# pwned passwords
hex = "0.4.3"
reqwest = {version = "0.11", default-features = false, features = ["rustls-tls"], optional = true}
sha1 = {version = "0.10", optional = true}

[dev-dependencies]
tokio = {version = "1", default-features = false, features = ["macros"]}

[features]
default = ["pwned"]
pwned = ["reqwest", "sha1"]
