[package]
edition = "2021"
name = "models"
publish = false
version = "0.1.0"

[lib]
name = "models"
path = "lib.rs"

[dependencies]
sea-orm = {version = "0.11", features = ["macros"]}
serde = {version = "1", features = ["derive"]}

async-std = {version = "1", optional = true}
tokio = {version = "1", optional = true}

[features]
runtime-async-std = ["async-std", "sea-orm/runtime-async-std-rustls"]
runtime-tokio = ["tokio", "sea-orm/runtime-tokio-rustls"]
