[package]
edition = "2021"
name = "prisma"
version = "0.0.0"

[[bin]]
name = "prisma"
path = "cli.rs"

# lib
[lib]
path = "lib.rs"

[dependencies]
prisma-client-rust = {git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = ["sqlite"]}
prisma-client-rust-cli = {git = "https://github.com/Brendonovich/prisma-client-rust", rev = "3aa9f017d840337a6f27749ce793f6cdf5d968ab", features = ["sqlite"]}
