[package]
edition = "2021"
name = "migration"
publish = false
version = "0.1.0"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = {version = "0.11"}

async-std = {version = "1", optional = true}
tokio = {version = "1", optional = true}

[features]
default = ["runtime-tokio"]
runtime-async-std = ["async-std", "sea-orm-migration/runtime-async-std-rustls"]
runtime-tokio = ["tokio", "sea-orm-migration/runtime-tokio-rustls"]
